# dobot_mujoco

./: .gitignore  LICENSE  README.md  SIM_CODEBASE_GUIDE.md  benchmark_cpu_gpu.slurm  demo_pick_place.py  kk_behavioral_shaping_20260423_161213.md  main.py  motion_template.py  pyproject.toml  record_rollouts.py  requirements.txt  teleop_keyboard.py  train.py
dobot_firm_utils/: calibrate_robot_starter_code.py  ece486_starter_code.py  gripper.py  suction_cup.py
dobot_mujoco/: __init__.py  rollout_recording.py
dobot_mujoco/env/: __init__.py  base_env.py  dobot_cube_stack.py  dobot_pick_place.py
dobot_mujoco/env/assets/: dobot_suction_cup.xml  dobot_table_scene.xml
dobot_mujoco/env/assets/meshes/: dobot_coppelia_auxLink1_visible_vis_1.stl  dobot_coppelia_auxLink2_visible_vis_1.stl  dobot_coppelia_auxLink3_visible_vis_1.stl  dobot_coppelia_auxLink4_visible_vis_1.stl  dobot_coppelia_auxLink5_visible_vis_1.stl  dobot_coppelia_auxLink_2_coll_1.stl  dobot_coppelia_auxLink_3_coll_1.stl  dobot_coppelia_auxLink_coll_1.stl  dobot_coppelia_link1_visible_vis_1.stl  dobot_coppelia_link1_visible_vis_2.stl  dobot_coppelia_link2_visible_vis_1.stl  dobot_coppelia_link2_visible_vis_10.stl  dobot_coppelia_link2_visible_vis_11.stl  dobot_coppelia_link2_visible_vis_12.stl  dobot_coppelia_link2_visible_vis_13.stl  dobot_coppelia_link2_visible_vis_14.stl  dobot_coppelia_link2_visible_vis_15.stl  dobot_coppelia_link2_visible_vis_2.stl  dobot_coppelia_link2_visible_vis_3.stl  (+36 more)
typings/mujoco/: __init__.pyi  _constants.pyi  _functions.pyi  _specs.pyi  _structs.pyi  gl_context.pyi  renderer.pyi
