[project]
name = "dobot-mujoco-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "gymnasium>=1.2.1",
    "gymnasium-robotics>=1.4.1",
    "mujoco>=3.3.7",
    "numpy<2",
    "sb3-contrib>=2.6.0",
    "stable-baselines3>=2.6.0",
]

[project.optional-dependencies]
tensorboard = ["tensorboard>=2.12.0"]
progressbar = ["tqdm>=0.3.0", "rich>=13.0.0"]
cpu = ["torch==2.6.0"]
cu124 = ["torch==2.6.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
